Bug 442860 - KTitleWidget is drawn with background color and covers up horizontal separator line below titlebar on KPageDialog
Summary: KTitleWidget is drawn with background color and covers up horizontal separato...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (show other bugs)
Version: 5.22.90
Platform: Neon Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-09-23 20:10 UTC by Marc
Modified: 2021-09-24 15:11 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marc 2021-09-23 20:10:23 UTC
SUMMARY
Ark Settings -> Configure Ark has a small grey horizontal bar at the top where the blue divider line ends

STEPS TO REPRODUCE
1. Open Ark
2. Go to Settings -> Configure Ark
3. Follow the blue divider line, at the top you will see a small grey horizontal line going into the view

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2021-09-23 20:47:45 UTC
What's going on here is that the background color from the KTitleWidget that provides the title text is covering up the line.

I don't know whether the problem here is that something changed in KTitleWidget, or with how it's positioned on the page.
Comment 2 Nate Graham 2021-09-23 21:43:18 UTC
I found the issue: we removed the "draw frames around page titles" option from Breeze, but is seems we defaulted it to on, rather than off, so the background color is always drawn now, and it just happens to match the page background so nobody noticed it except for this visual glitch.

In any event, reverting 726f499f240881cbcf6a774b652a6d2926c766a9 in Breeze fixes the issue.

Ismael, would you be able to investigate?
Comment 3 Bug Janitor Service 2021-09-23 22:04:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/148
Comment 4 Nate Graham 2021-09-24 15:09:59 UTC
Git commit 9ecd94af5bc68b4b72faf005f8bdd163176d5b22 by Nate Graham, on behalf of Ismael Asensio.
Committed on 24/09/2021 at 15:08.
Pushed by ngraham into branch 'master'.

KTitleWidget: Make background transparent again

Removing this turned out to cause a small visual glitch in the
settings window for some apps
FIXED-IN: 5.23

M  +4    -0    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/commit/9ecd94af5bc68b4b72faf005f8bdd163176d5b22
Comment 5 Nate Graham 2021-09-24 15:11:42 UTC
Git commit fa80b07b2a2c74723bce303511bc28d3709809a6 by Nate Graham, on behalf of Ismael Asensio.
Committed on 24/09/2021 at 15:11.
Pushed by ngraham into branch 'Plasma/5.23'.

KTitleWidget: Make background transparent again

Removing this turned out to cause a small visual glitch in the
settings window for some apps
FIXED-IN: 5.23


(cherry picked from commit 9ecd94af5bc68b4b72faf005f8bdd163176d5b22)

M  +4    -0    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/commit/fa80b07b2a2c74723bce303511bc28d3709809a6