KTitleWidget: Make background transparent again

Removing this turned out to cause a small visual glitch in the
settings window for some apps

BUG: 442860
FIXED-IN: 5.23